# MedFlow-AI

./: .env  .gitignore  Backends _db_setup.md  C:\Users\amtul\Desktop\MedFlow-AI\ai_logs.json  README.md  ai_logs.json  check_enum.py  fix_db.py  main.py  package-lock.json  pyproject.toml  requirements.txt  scratch.py  test_booking_func.py  ws_test.html
app/: main.py  pyproject.toml
app/ai/: rag_pipeline.py  test_service.py
app/ai/services/: input_service.py  insight_service.py  rag_service.py
app/api/: admin_routes.py
app/api/routes/: auth.py  patient_routes.py
app/database/: db_connection.py  models.py
app/schemas/: all_schema.py
app/services/: appointment_db_service.py  booking_service.py  consultation_db_service.py  doctor_service.py  patient_db_service.py
app/utils/: doctor_store.py  session_store.py
app/workflows/: ai_logs.json  patient_flow.py
backend/: config.py  main.py
backend/ai/prompts/: diagnosis_prompt.txt
backend/ai/rag/: embeddings.py  rag_pipeline.py
backend/ai/services/: diagnosis_service.py  rag_service.py  triage_service.py
backend/api/: patient_routes.py
backend/api/routes/: admin_routes.py  auth.py
backend/database/: db_connection.py
backend/schemas/: all_schema.py  appointment_schema.py  doctor_schema.py  patient_schema.py
backend/services/: patient_service.py  pdf_service.py
backend/workflows/: patient_flow.py
src/ai/: ai_logs.json  test_service.py
src/ai/db_services/: appointment_db_service.py  booking_service.py  consultation_db_service.py  db_services.py  doctor_service.py  med_history_service.py  (+1 more)
(+26 files in other folders)
