[project]
name = "backend"
version = "0.1.0"
requires-python = ">=3.10"

dependencies = [
    "fastapi>=0.135.3",
    "uvicorn[standard]>=0.44.0",

    "requests==2.32.3",
    "PyPDF2==3.0.1",
    "python-dotenv>=1.2.2",

    "faiss-cpu==1.8.0.post1",
    "sentence-transformers==2.7.0",

    "langchain==0.1.16",
    "langchain-community==0.0.32",
    "langchain-groq==0.1.4",

    "sqlalchemy>=2.0.49",
    "psycopg2-binary>=2.9.11",

    "python-jose[cryptography]>=3.5.0",
    "passlib[bcrypt]>=1.7.4"
]
# REMOVE workspace unless you truly need multi-project setup
# 👇 ADD THIS AT THE VERY END
[tool.uv]
required-environments = [
    "sys_platform == 'darwin' and platform_machine == 'x86_64'"
]